<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/logoIndex"
        android:layout_width="match_parent"
        android:layout_height="179dp"
        android:layout_marginEnd="8dp"
        android:layout_weight="1"
        android:contentDescription="@string/logo_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/logo"
        tools:layout_editor_absoluteY="0dp" />

    <EditText
        android:id="@+id/identifierLogin"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_weight="1"
        android:ems="10"
        android:hint="@string/email_input"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/passwordLogin"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_weight="1"
        android:ems="10"
        android:hint="@string/password_input"
        android:inputType="textPassword" />

    <Switch
        android:id="@+id/remindLogin"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:layout_weight="1"
        android:checked="false"
        android:text="@string/remind_login" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_weight="1"
        android:background="#07222b"
        android:text="@string/btn_login"
        android:textColor="@android:color/background_light" />

</LinearLayout>